Fix alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: var(--size-l);
   width: 90vw;
   max-width: 1280px;
