--- a/src/components/ToDoList/ToDoList.css
+++ b/src/components/ToDoList/ToDoList.css
@@ -3,5 +3,4 @@
   flex-direction: column;
   gap: var(--size-l);
   width: 100%;
-  max-width: 480px;
 }
